; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_csr.c_syscall_csr_get_active_config.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_csr.c_syscall_csr_get_active_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.csrctl_args = type { i32, i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @syscall_csr_get_active_config(%struct.csrctl_args* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.csrctl_args*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.csrctl_args* %0, %struct.csrctl_args** %3, align 8
  store i32 0, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %6 = load %struct.csrctl_args*, %struct.csrctl_args** %3, align 8
  %7 = getelementptr inbounds %struct.csrctl_args, %struct.csrctl_args* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %16, label %10

10:                                               ; preds = %1
  %11 = load %struct.csrctl_args*, %struct.csrctl_args** %3, align 8
  %12 = getelementptr inbounds %struct.csrctl_args, %struct.csrctl_args* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = sext i32 %13 to i64
  %15 = icmp ne i64 %14, 4
  br i1 %15, label %16, label %18

16:                                               ; preds = %10, %1
  %17 = load i32, i32* @EINVAL, align 4
  store i32 %17, i32* %2, align 4
  br label %29

18:                                               ; preds = %10
  %19 = call i32 @csr_get_active_config(i32* %4)
  store i32 %19, i32* %5, align 4
  %20 = load i32, i32* %5, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %18
  %23 = load i32, i32* %5, align 4
  store i32 %23, i32* %2, align 4
  br label %29

24:                                               ; preds = %18
  %25 = load %struct.csrctl_args*, %struct.csrctl_args** %3, align 8
  %26 = getelementptr inbounds %struct.csrctl_args, %struct.csrctl_args* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @copyout(i32* %4, i32 %27, i32 4)
  store i32 %28, i32* %2, align 4
  br label %29

29:                                               ; preds = %24, %22, %16
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i32 @csr_get_active_config(i32*) #1

declare dso_local i32 @copyout(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
